Couldnt fix overflow on index

--- a/static/burger.css
+++ b/static/burger.css
@@ -15,9 +15,9 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: #00BAF0;
-    background: linear-gradient(to left, var(--wine), var(--dark-smoke));
-    color: #fff;
+    /*background-color: #00BAF0;*/
+    background: var(--wine);/*linear-gradient(to left, var(--wine), var(--dark-smoke));*/
+    color: var(--light-sky);
     height: 50px;
     padding: 1em;
 }
@@ -46,7 +46,7 @@
 }
 .menu-button, .menu-button::before, .menu-button::after {
     display: block;
-    background-color: #fff;
+    background-color: var(--light-sky);
     position: absolute;
     height: 4px;
     width: 30px;
